[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Pickup.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Courier Bold Italic.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Pickup" type="Node2D"]
use_parent_material = true
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -16, 16, 16, 16, 16, -16, -16, -16 )

[node name="PickupDelay" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -16.0
margin_top = -32.0
margin_right = 16.0
margin_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="PickupDelay" to="." method="_on_PickupDelay_timeout"]
